--- a/html/home.html
+++ b/html/home.html
@@ -3,24 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap">
+    <link rel="stylesheet" href="../css/styles.css" />
     <title>SPORTIFY</title>
   </head>
   <body>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
+    <div class="navbar">
+      <a class="home">SPORTIFY</a>
+      <div class="icons">
+      <img  src="../ico/send.ico" alt="Send" />
+      <img  src="../ico/user_add.ico" alt="User Add" />
+      <img  src="../ico/user.ico" alt="User" />
+      </div>
+    </div>
+
+    <div class="content">
+      <h1>Bienvenido a nuestra página web</h1>
+      <p>Contenido de la página...</p>
+    </div>
+
+    <footer>
+      <div class="creative-commons">
+        <img  src="../ico/cc_by.ico" alt="By" />
+        <img  src="../ico/cc.ico" alt="Creative Commons" />
+      </div>
+      <div class="social-networks">
+        <img src="../ico/twitter.ico" alt="Twitter" />
+        <img src="../ico/instagram.ico" alt="Instagram" />
+        <img src="../ico/facebook.ico" alt="Facebook" />
+      </div>
+  </footer>
+
   </body>
 </html>
