add sidebar, footer and navbar

--- a/html/home.html
+++ b/html/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,13 +16,23 @@
       <img  src="../ico/user.ico" alt="User" />
       </div>
     </div>
-
-    <div class="content">
-      <h1>Bienvenido a nuestra página web</h1>
-      <p>Contenido de la página...</p>
+    <div class="container">
+    <button class="menu-toggle">☰ Menú</button>
+    <div class="sidebar">
+        <h2>A-Z</h2>
+        <div><img src="../ico/ajedrez.ico" alt="Chess"/><a href="#">Ajedrez</a></div>
+        <div><img src="../ico/baloncesto.ico" alt="Basketball"/><a href="#">Baloncesto</a></div>
+        <div><img src="../ico/beisbol.ico" alt="Baseball"/><a href="#">Beisbol</a></div>
+        <div><img src="../ico/boxeo.ico" alt="Boxing"/><a href="#">Boxeo</a></div>
+        <div><img src="../ico/futbol.ico" alt="Football"/><a href="#">Fútbol</a></div>
+        <div><img src="../ico/hockey.ico" alt="Hockey"/><a href="#">Hockey</a></div>
+        <div><img src="../ico/joan.ico" alt="Joan"/><a href="#">Joan Pradells</a></div>
+        <div><img src="../ico/natacion.ico" alt="Swimming"/><a href="#">Natación</a></div>
+        <div><img src="../ico/tenis.ico" alt="Tennis"/><a href="#">Rafa Nadal</a></div>
+        <div><img src="../ico/rugby.ico" alt="Rugby"/><a href="#">Rugby</a></div>
     </div>
-
-    <footer>
+  </div>
+      <footer>
       <div class="creative-commons">
         <img  src="../ico/cc_by.ico" alt="By" />
         <img  src="../ico/cc.ico" alt="Creative Commons" />
@@ -33,6 +43,7 @@
         <img src="../ico/facebook.ico" alt="Facebook" />
       </div>
   </footer>
-
   </body>
 </html>
+
+
