--- a/html/home.html
+++ b/html/home.html
@@ -11,14 +11,14 @@
     <div class="navbar">
       <a class="home">SPORTIFY</a>
       <div class="icons">
-      <img  src="../ico/send.ico" alt="Send" />
-      <img  src="../ico/user_add.ico" alt="User Add" />
-      <img  src="../ico/user.ico" alt="User" />
+        <img src="../ico/send.ico" alt="Send" />
+        <img src="../ico/user_add.ico" alt="User Add" />
+        <img src="../ico/user.ico" alt="User" />
       </div>
     </div>
     <div class="container">
-    <button class="menu-toggle">☰ Menú</button>
-    <div class="sidebar">
+      <button class="menu-toggle">☰ Menú</button>
+      <div class="sidebar">
         <h2>A-Z</h2>
         <div><img src="../ico/ajedrez.ico" alt="Chess"/><a href="#">Ajedrez</a></div>
         <div><img src="../ico/baloncesto.ico" alt="Basketball"/><a href="#">Baloncesto</a></div>
@@ -30,20 +30,71 @@
         <div><img src="../ico/natacion.ico" alt="Swimming"/><a href="#">Natación</a></div>
         <div><img src="../ico/tenis.ico" alt="Tennis"/><a href="#">Rafa Nadal</a></div>
         <div><img src="../ico/rugby.ico" alt="Rugby"/><a href="#">Rugby</a></div>
-    </div>
+      </div>
+      <div class="ludopatia">
+        <button class="image-button">
+          <img src="../ico/battlepass.ico" alt="Icono Izquierda" class="icon-left">
+          <img src="../img/pass.png" alt="Botón Imagen" class="button-image">
+          <img src="../ico/vbucks.ico" alt="Icono Derecha" class="icon-right">
+          <span class="button-text">CAMINO DEL LUDÓPATA</span>
+        </button>
+      </div>
+
+<!-- Partidos destacados -->
+<div class="partidos-destacados">
+  <div class="title">Partidos destacados</div>
+
+  <!-- Ejemplo de partido de Fútbol -->
+  <div class="section">
+      <div class="section-title">Sábado, 8 de febrero - Fútbol</div>
+      <table class="match-table">
+          <thead class="table-header">
+              <tr>
+                  <th>Equipo</th>
+                  <th>Hora</th>
+                  <th>1</th>
+                  <th>X</th>
+                  <th>2</th>
+                  <th>Goles Totales</th>
+                  <th>Doble Oportunidad</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr>
+                  <td><img src="../ico/real-madrid.ico" alt="Real Madrid"> Real Madrid</td>
+                  <td rowspan="2">21:00</td>
+                  <td rowspan="2" class="green-text">1.50</td>
+                  <td rowspan="2" class="green-text">4.20</td>
+                  <td rowspan="2" class="green-text">7</td>
+                  <td rowspan="2">
+                      <div>Más de: <span class="green-text">2.5</span></div>
+                      <div>Menos de: <span class="green-text">1.5</span></div>
+                  </td>
+                  <td rowspan="2">1X: <span class="green-text">1.20 </span> 12: <span class="green-text">1.25</span> X2: <span class="green-text">2</span></td>
+              </tr>
+              <tr>
+                  <td><img src="../ico/atletico-madrid.ico" alt="Atletico de Madrid"> Atletico de Madrid</td>
+              </tr>
+          </tbody>
+      </table>
   </div>
-      <footer>
+</div>
+<!-- Fin Partidos destacados -->
+
+
+</div>
+
+    </div>
+    <footer>
       <div class="creative-commons">
-        <img  src="../ico/cc_by.ico" alt="By" />
-        <img  src="../ico/cc.ico" alt="Creative Commons" />
+        <img src="../ico/cc_by.ico" alt="By" />
+        <img src="../ico/cc.ico" alt="Creative Commons" />
       </div>
       <div class="social-networks">
         <img src="../ico/twitter.ico" alt="Twitter" />
         <img src="../ico/instagram.ico" alt="Instagram" />
         <img src="../ico/facebook.ico" alt="Facebook" />
       </div>
-  </footer>
+    </footer>
   </body>
 </html>
-
-
