--- a/html/home.html
+++ b/html/home.html
@@ -9,13 +9,14 @@
   </head>
   <body>
     <div class="navbar">
-      <a class="home">SPORTIFY</a>
+      <a class="home" href="#">SPORTIFY</a>
       <div class="icons">
         <img src="../ico/send.ico" alt="Send" />
-        <img id="openModalRegister" src="../ico/user_add.ico" alt="User Add" style="cursor: pointer;"/>
-        <img src="../ico/user.ico" alt="User" />
+        <img id="openModalRegister" src="../ico/user_add.ico" alt="User Add" style="cursor: pointer;" />
+          <img src="../ico/user.ico" alt="User" id="userIcon" />
       </div>
     </div>
+    
     <div class="modal-container" id="modalContainerRegister">
       <div class="modal">
         <h2>Registro</h2>
@@ -23,7 +24,7 @@
         <input type="text" placeholder="Apellidos">
         <input type="email" placeholder="Correo electrónico">
         <input type="date" placeholder="Fecha de nacimiento">
-        <button id="nextModal">Siguiente</button>
+        <button id="nextModalPassword">Siguiente</button>
       </div>
     </div>
     <div class="modal-container" id="modalContainerPassword">
@@ -31,7 +32,27 @@
         <h2>Contraseña</h2>
         <input type="password" name="password" id="password" placeholder="Contraseña: ">
         <input type="password" name="repeatPassword" id="repeatPassword" placeholder="Repita su contraseña:">
-        <button id="closeModal">Siguiente</button>
+        <button id="nextModalDNI">Siguiente</button>
+      </div>
+    </div>
+    <div class="modal-container" id="modalContainerDNI">
+      <div class="modal">
+        <h2>Identificación</h2>
+        <div class="upload-box">
+          <img src="../ico/upload.ico" alt="Upload">
+          <p>Foto del DNI</p>
+        </div>
+        <button id="nextModalSelfie">Siguiente</button>
+      </div>
+    </div>
+    <div class="modal-container" id="modalContainerSelfie">
+      <div class="modal">
+        <h2>Identificación</h2>
+        <div class="upload-box">
+          <img src="../ico/upload.ico" alt="Upload">
+          <p>Selfie</p>
+        </div>
+        <button id="closeModal">Guardar</button>
       </div>
     </div>
     <div class="container">
