--- a/html/home.html
+++ b/html/home.html
@@ -59,17 +59,48 @@
       <button class="menu-toggle">☰ Menú</button>
       <div class="sidebar">
         <h2>A-Z</h2>
-        <div><img src="../ico/ajedrez.ico" alt="Chess"/><a href="#">Ajedrez</a></div>
-        <div><img src="../ico/baloncesto.ico" alt="Basketball"/><a href="#">Baloncesto</a></div>
-        <div><img src="../ico/beisbol.ico" alt="Baseball"/><a href="#">Beisbol</a></div>
-        <div><img src="../ico/boxeo.ico" alt="Boxing"/><a href="#">Boxeo</a></div>
-        <div><img src="../ico/futbol.ico" alt="Football"/><a href="#">Fútbol</a></div>
-        <div><img src="../ico/hockey.ico" alt="Hockey"/><a href="#">Hockey</a></div>
-        <div><img src="../ico/joan.ico" alt="Joan"/><a href="#">Joan Pradells</a></div>
-        <div><img src="../ico/natacion.ico" alt="Swimming"/><a href="#">Natación</a></div>
-        <div><img src="../ico/tenis.ico" alt="Tennis"/><a href="#">Rafa Nadal</a></div>
-        <div><img src="../ico/rugby.ico" alt="Rugby"/><a href="#">Rugby</a></div>
+        <div>
+          <img src="../ico/ajedrez.ico" alt="Chess" />
+          <a href="deportes/ajedrez.html">Ajedrez</a>
+        </div>
+        <div>
+          <img src="../ico/baloncesto.ico" alt="Basketball" />
+          <a href="deportes/baloncesto.html">Baloncesto</a>
+        </div>
+        <div>
+          <img src="../ico/beisbol.ico" alt="Baseball" />
+          <a href="deportes/beisbol.html">Beisbol</a>
+        </div>
+        <div>
+          <img src="../ico/boxeo.ico" alt="Boxing" />
+          <a href="deportes/boxeo.html">Boxeo</a>
+        </div>
+        <div>
+          <img src="../ico/futbol.ico" alt="Football" />
+          <a href="deportes/futbol.html">Fútbol</a>
+        </div>
+        <div>
+          <img src="../ico/hockey.ico" alt="Hockey" />
+          <a href="deportes/hockey.html">Hockey</a>
+        </div>
+        <div>
+          <img src="../ico/joan.ico" alt="Joan" />
+          <a href="deportes/joanPradells.html">Joan Pradells</a>
+        </div>
+        <div>
+          <img src="../ico/natacion.ico" alt="Swimming" />
+          <a href="deportes/natacion.html">Natación</a>
+        </div>
+        <div>
+          <img src="../ico/tenis.ico" alt="Tennis" />
+          <a href="deportes/rafaNadal.html">Rafa Nadal</a>
+        </div>
+        <div>
+          <img src="../ico/rugby.ico" alt="Rugby" />
+          <a href="deportes/rugby.html">Rugby</a>
+        </div>
       </div>
+    </div>
       <div class="ludopatia">
         <button class="image-button">
           <img src="../ico/battlepass.ico" alt="Icono Izquierda" class="icon-left">
